--- a/fliplearn/templates/index.html
+++ b/fliplearn/templates/index.html
@@ -70,8 +70,7 @@
     <p>Here you can see all cards of user {{userID}}: You have {{ count }} cards.</p>
 
     {% for card in cards %}
-    <div
-            class="flex flex-wrap items-end justify-start w-full transition duration-500 ease-in-out transform bg-black border-2 border-gray-600 rounded-lg hover:border-white ">
+    <div class="flex flex-wrap items-end justify-start w-full transition duration-500 ease-in-out transform bg-black border-2 border-gray-600 rounded-lg hover:border-white ">
         <div class="w-full xl:w-1/4 md:w-1/4">
             <div class="relative flex flex-col h-full p-8 ">
                 <h2 class="mb-4 font-semibold tracking-widest text-white uppercase title-font">
